--- a/RockPaperScissors/Base.lproj/Main.storyboard
+++ b/RockPaperScissors/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
-    <device id="retina5_5" orientation="landscape">
+    <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -20,11 +20,11 @@
                         <viewControllerLayoutGuide type="bottom" id="qHh-Mt-9TT"/>
                     </layoutGuides>
                     <view key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="3se-qz-xqx" customClass="SKView">
-                        <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xmc-KA-CUI">
-                                <rect key="frame" x="542" y="341" width="58" height="39"/>
+                                <rect key="frame" x="473" y="302" width="58" height="39"/>
                                 <fontDescription key="fontDescription" type="italicSystem" pointSize="22"/>
                                 <state key="normal" title="Paper">
                                     <color key="titleColor" red="0.97669474095034436" green="1" blue="0.96118510700637572" alpha="1" colorSpace="calibratedRGB"/>
@@ -34,7 +34,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uag-HR-NZO">
-                                <rect key="frame" x="634" y="341" width="82" height="39"/>
+                                <rect key="frame" x="565" y="302" width="82" height="39"/>
                                 <fontDescription key="fontDescription" type="italicSystem" pointSize="22"/>
                                 <state key="normal" title="Scissors">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -44,7 +44,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xvY-ur-mL5">
-                                <rect key="frame" x="451" y="341" width="49" height="39"/>
+                                <rect key="frame" x="382" y="302" width="49" height="39"/>
                                 <fontDescription key="fontDescription" type="italicSystem" pointSize="22"/>
                                 <state key="normal" title="Rock">
                                     <color key="titleColor" red="0.94638699716776065" green="1" blue="0.93567556056877521" alpha="1" colorSpace="calibratedRGB"/>
@@ -54,13 +54,13 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Result: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ORC-UN-o8i">
-                                <rect key="frame" x="27" y="351" width="73" height="27"/>
+                                <rect key="frame" x="27" y="312" width="73" height="27"/>
                                 <fontDescription key="fontDescription" type="italicSystem" pointSize="22"/>
                                 <color key="textColor" red="0.9410184011684346" green="1" blue="0.93810265766389023" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Player 1 Chose:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u0B-g3-pu3">
-                                <rect key="frame" x="451" y="20" width="265" height="21"/>
+                                <rect key="frame" x="382" y="20" width="265" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="JWH-EC-cSF"/>
                                 </constraints>
@@ -83,13 +83,13 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rock" translatesAutoresizingMaskIntoConstraints="NO" id="T8T-Yv-hex" userLabel="computerImage">
-                                <rect key="frame" x="44" y="104" width="205" height="205"/>
+                                <rect key="frame" x="44" y="104" width="166" height="166"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="T8T-Yv-hex" secondAttribute="height" multiplier="1:1" id="cz1-df-EFa"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RockFlip" translatesAutoresizingMaskIntoConstraints="NO" id="6g4-Xq-3Cf" userLabel="playerImage">
-                                <rect key="frame" x="412" y="104" width="205" height="205"/>
+                                <rect key="frame" x="382" y="104" width="166" height="166"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="6g4-Xq-3Cf" secondAttribute="height" multiplier="1:1" id="VhA-Vt-Mmp"/>
                                 </constraints>
@@ -118,6 +118,9 @@
                                 <state key="normal" title="RESET">
                                     <color key="titleColor" red="0.97672786062514849" green="1" blue="0.9651475370758591" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="resetGame:" destination="BV1-FR-VrT" eventType="touchUpInside" id="CDd-3y-Xyu"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
